src/enki/frontend/Enki1Parser.d
/+
    Copyright (c) 2008 Eric Anderton

    Permission is hereby granted, free of charge, to any person
    obtaining a copy of this software and associated documentation
    files (the "Software"), to deal in the Software without
    restriction, including without limitation the rights to use,
    copy, modify, merge, publish, distribute, sublicense, and/or
    sell copies of the Software, and to permit persons to whom the
    Software is furnished to do so, subject to the following
    conditions:

    The above copyright notice and this permission notice shall be
    included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
    OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
    NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
    HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
    FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
    OTHER DEALINGS IN THE SOFTWARE.

+/
module enki.frontend.Enki1Parser;
private import enki.frontend.Enki1ParserBase;
private import enki.EnkiToken;
private import enki.Binding;
private import enki.Expression;
private import enki.Param;
private import enki.ProductionArg;
private import enki.Rule;
private import enki.RulePredicate;

debug import tango.io.Stdout;

class Enki1Parser:Enki1ParserBase{
	static char[] getHelp(){
		return "\r\nRendition of the Enki V1 grammar, for backwards compatibility.  \r\nUsers are strongly discouraged from using this grammar due to its \r\nnumerous grammatical faults and quirks.  Please see the \'enki2\' frontend.\r\n";
	}

	/*
	Syntax
		::= (Rule | Directive)* eoi;

	*/
	bool parse_Syntax(){
		debug Stdout("parse_Syntax").newline;
		// Iterator
		start2:
			// (terminator)
				// Production
				if(parse_eoi()){
					goto end3;
				}
			// (expression)
			expr4:
				// OrGroup start2
					// Production
					if(parse_Rule()){
						goto start2;
					}
				term5:
					// Production
					if(!parse_Directive()){
						goto fail1;
					}
			goto start2;
		end3:
		// Rule
		pass0:
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Syntax failed").newline;
			return false;
	}

	/*
	Rule
		= void addRule(String name,Param[] decl,RulePredicate pred,Param[] vars,Expression expr)
		::= Identifier:name [RuleDecl:decl] [RulePredicate:pred] &TOK_RULEASSIGN Expression:expr ";";

	*/
	bool parse_Rule(){
		debug Stdout("parse_Rule").newline;
		Param[] var_vars;
		Expression var_expr;
		Param[] var_decl;
		RulePredicate var_pred;
		String var_name;

		// AndGroup
			auto position3 = getPos();
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,getMatchValue!(String)());
			term5:
				// Optional
					// Production
					if(!parse_RuleDecl()){
						goto term6;
					}
					smartAssign(var_decl,getMatchValue!(Param[])());
			term6:
				// Optional
					// Production
					if(!parse_RulePredicate()){
						goto term7;
					}
					smartAssign(var_pred,getMatchValue!(RulePredicate)());
			term7:
				// CustomTerminal
				if(!match(TOK_RULEASSIGN)){
					goto fail4;
				}
			term8:
				// Production
				if(!parse_Expression()){
					goto fail4;
				}
				smartAssign(var_expr,getMatchValue!(OrGroup)());
			term9:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			addRule(var_name,var_decl,var_pred,var_vars,var_expr);
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Rule failed").newline;
			return false;
	}

	/*
	RuleDecl
		= Param[] params
		::= ParamsExpr:params;

	*/
	bool parse_RuleDecl(){
		debug Stdout("parse_RuleDecl").newline;
		Param[] var_params;

		// Production
		if(!parse_ParamsExpr()){
			goto fail1;
		}
		smartAssign(var_params,getMatchValue!(Param[])());
		// Rule
		pass0:
			setMatchValue(var_params);
			debug Stdout.format("\tparse_RuleDecl passed: {0}",getMatchValue!(Param[])).newline;
			return true;
		fail1:
			setMatchValue((Param[]).init);
			debug Stdout.format("\tparse_RuleDecl failed").newline;
			return false;
	}

	/*
	RulePredicate
		= RulePredicate pred
		::= "=" (ClassPredicate:pred | FunctionPredicate:pred | BindingPredicate:pred);

	*/
	bool parse_RulePredicate(){
		debug Stdout("parse_RulePredicate").newline;
		RulePredicate var_pred;

		// AndGroup
			auto position3 = getPos();
				// Terminal
				if(!match("=")){
					goto fail4;
				}
			term5:
				// OrGroup pass0
					// Production
					if(parse_ClassPredicate()){
						smartAssign(var_pred,getMatchValue!(ClassPredicate)());
						goto pass0;
					}
				term6:
					// Production
					if(parse_FunctionPredicate()){
						smartAssign(var_pred,getMatchValue!(FunctionPredicate)());
						goto pass0;
					}
				term7:
					// Production
					if(parse_BindingPredicate()){
						smartAssign(var_pred,getMatchValue!(BindingPredicate)());
						goto pass0;
					}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(var_pred);
			debug Stdout.format("\tparse_RulePredicate passed: {0}",getMatchValue!(RulePredicate)).newline;
			return true;
		fail1:
			setMatchValue((RulePredicate).init);
			debug Stdout.format("\tparse_RulePredicate failed").newline;
			return false;
	}

	/*
	ClassPredicate
		= new ClassPredicate(String name,Param[] params)
		::= &TOK_NEW Identifier:name ParamsExpr:params;

	*/
	bool parse_ClassPredicate(){
		debug Stdout("parse_ClassPredicate").newline;
		Param[] var_params;
		String var_name;

		// AndGroup
			auto position3 = getPos();
				// CustomTerminal
				if(!match(TOK_NEW)){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,getMatchValue!(String)());
			term6:
				// Production
				if(parse_ParamsExpr()){
					smartAssign(var_params,getMatchValue!(Param[])());
					goto pass0;
				}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new ClassPredicate(var_name,var_params));
			debug Stdout.format("\tparse_ClassPredicate passed: {0}",getMatchValue!(ClassPredicate)).newline;
			return true;
		fail1:
			setMatchValue((ClassPredicate).init);
			debug Stdout.format("\tparse_ClassPredicate failed").newline;
			return false;
	}

	/*
	FunctionPredicate
		= new FunctionPredicate(Param decl,Param[] params)
		::= ExplicitParam:decl ParamsExpr:params;

	*/
	bool parse_FunctionPredicate(){
		debug Stdout("parse_FunctionPredicate").newline;
		Param var_decl;
		Param[] var_params;

		// AndGroup
			auto position3 = getPos();
				// Production
				if(!parse_ExplicitParam()){
					goto fail4;
				}
				smartAssign(var_decl,getMatchValue!(Param)());
			term5:
				// Production
				if(parse_ParamsExpr()){
					smartAssign(var_params,getMatchValue!(Param[])());
					goto pass0;
				}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new FunctionPredicate(var_decl,var_params));
			debug Stdout.format("\tparse_FunctionPredicate passed: {0}",getMatchValue!(FunctionPredicate)).newline;
			return true;
		fail1:
			setMatchValue((FunctionPredicate).init);
			debug Stdout.format("\tparse_FunctionPredicate failed").newline;
			return false;
	}

	/*
	BindingPredicate
		= new BindingPredicate(Param param)
		::= Param:param;

	*/
	bool parse_BindingPredicate(){
		debug Stdout("parse_BindingPredicate").newline;
		Param var_param;

		// Production
		if(!parse_Param()){
			goto fail1;
		}
		smartAssign(var_param,getMatchValue!(Param)());
		// Rule
		pass0:
			setMatchValue(new BindingPredicate(var_param));
			debug Stdout.format("\tparse_BindingPredicate passed: {0}",getMatchValue!(BindingPredicate)).newline;
			return true;
		fail1:
			setMatchValue((BindingPredicate).init);
			debug Stdout.format("\tparse_BindingPredicate failed").newline;
			return false;
	}

	/*
	ParamsExpr
		= Param[] params
		::= "(" {Param:~params} % "," ")";

	*/
	bool parse_ParamsExpr(){
		debug Stdout("parse_ParamsExpr").newline;
		Param[] var_params;

		// AndGroup
			auto position3 = getPos();
				// Terminal
				if(!match("(")){
					goto fail4;
				}
			term5:
				// Iterator
				size_t counter10 = 0;
				start6:
					// (terminator)
						// Terminal
						if(match(")")){
							goto end7;
						}
					// (delimeter)
					delim9:
					if(counter10 > 0){
						// Terminal
						if(!match(",")){
							goto fail4;
						}
					}
					// (expression)
					expr8:
						// Production
						if(!parse_Param()){
							goto fail4;
						}
						smartAppend(var_params,getMatchValue!(Param)());
					increment11:
					// (increment expr count)
						counter10 ++;
					goto start6;
				end7:
					// (range test)
						if(((counter10 >= 1))){
							goto pass0;
						}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(var_params);
			debug Stdout.format("\tparse_ParamsExpr passed: {0}",getMatchValue!(Param[])).newline;
			return true;
		fail1:
			setMatchValue((Param[]).init);
			debug Stdout.format("\tparse_ParamsExpr failed").newline;
			return false;
	}

	/*
	Param
		= Param param
		::= ExplicitParam:param | WeakParam:param;

	*/
	bool parse_Param(){
		debug Stdout("parse_Param").newline;
		Param var_param;

		// OrGroup pass0
			// Production
			if(parse_ExplicitParam()){
				smartAssign(var_param,getMatchValue!(Param)());
				goto pass0;
			}
		term2:
			// Production
			if(!parse_WeakParam()){
				goto fail1;
			}
			smartAssign(var_param,getMatchValue!(Param)());
		// Rule
		pass0:
			setMatchValue(var_param);
			debug Stdout.format("\tparse_Param passed: {0}",getMatchValue!(Param)).newline;
			return true;
		fail1:
			setMatchValue((Param).init);
			debug Stdout.format("\tparse_Param failed").newline;
			return false;
	}

	/*
	WeakParam
		= new Param(String name,String value)
		::= Identifier:name;

	*/
	bool parse_WeakParam(){
		debug Stdout("parse_WeakParam").newline;
		String var_value;
		String var_name;

		// Production
		if(!parse_Identifier()){
			goto fail1;
		}
		smartAssign(var_name,getMatchValue!(String)());
		// Rule
		pass0:
			setMatchValue(new Param(var_name,var_value));
			debug Stdout.format("\tparse_WeakParam passed: {0}",getMatchValue!(Param)).newline;
			return true;
		fail1:
			setMatchValue((Param).init);
			debug Stdout.format("\tparse_WeakParam failed").newline;
			return false;
	}

	/*
	ExplicitParam
		= new Param(String type,String name,String value)
		::= ParamType:type Identifier:name ["=" &TOK_STRING:value];

	*/
	bool parse_ExplicitParam(){
		debug Stdout("parse_ExplicitParam").newline;
		String var_type;
		String var_value;
		String var_name;

		// AndGroup
			auto position3 = getPos();
				// Production
				auto position6 = getPos();
				if(!parse_ParamType()){
					goto fail4;
				}
				smartAssign(var_type,slice(position6,getPos()));
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,getMatchValue!(String)());
			term7:
				// Optional
					// AndGroup
						auto position9 = getPos();
							// Terminal
							if(!match("=")){
								goto fail10;
							}
						term11:
							// CustomTerminal
							if(match(TOK_STRING)){
								smartAssign(var_value,getMatchValue!(String)());
								goto pass0;
							}
						fail10:
						setPos(position9);
					goto pass0;
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new Param(var_type,var_name,var_value));
			debug Stdout.format("\tparse_ExplicitParam passed: {0}",getMatchValue!(Param)).newline;
			return true;
		fail1:
			setMatchValue((Param).init);
			debug Stdout.format("\tparse_ExplicitParam failed").newline;
			return false;
	}

	/*
	ParamType
		::= Identifier Brackets;

	*/
	bool parse_ParamType(){
		debug Stdout("parse_ParamType").newline;
		// AndGroup
			auto position3 = getPos();
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
			term5:
				// Production
				if(parse_Brackets()){
					goto pass0;
				}
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_ParamType failed").newline;
			return false;
	}

	/*
	Brackets
		::= ["[" "]" Brackets];

	*/
	bool parse_Brackets(){
		debug Stdout("parse_Brackets").newline;
		// Optional
			// AndGroup
				auto position3 = getPos();
					// Terminal
					if(!match("[")){
						goto fail4;
					}
				term5:
					// Terminal
					if(!match("]")){
						goto fail4;
					}
				term6:
					// Production
					if(parse_Brackets()){
						goto pass0;
					}
				fail4:
				setPos(position3);
				goto pass0;
		// Rule
		pass0:
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Brackets failed").newline;
			return false;
	}
	alias parse_OrGroup parse_Expression;

	/*
	OrGroup
		= new OrGroup(Expression[] exprs)
		::= (AndGroup:~exprs)+ % "|";

	*/
	bool parse_OrGroup(){
		debug Stdout("parse_OrGroup").newline;
		Expression[] var_exprs;

		// Iterator
		size_t counter6 = 0;
		start2:
			// (terminator)
			if(!hasMore()){
				goto end3;
			}
			// (delimeter)
			delim5:
			if(counter6 > 0){
				// Terminal
				if(!match("|")){
					goto end3;
				}
			}
			// (expression)
			expr4:
				// Production
				if(!parse_AndGroup()){
					goto end3;
				}
				smartAppend(var_exprs,getMatchValue!(AndGroup)());
			increment7:
			// (increment expr count)
				counter6 ++;
			goto start2;
		end3:
			// (range test)
				if(!((counter6 >= 1))){
					goto fail1;
					goto pass0;
				}
		// Rule
		pass0:
			setMatchValue(new OrGroup(var_exprs));
			debug Stdout.format("\tparse_OrGroup passed: {0}",getMatchValue!(OrGroup)).newline;
			return true;
		fail1:
			setMatchValue((OrGroup).init);
			debug Stdout.format("\tparse_OrGroup failed").newline;
			return false;
	}

	/*
	AndGroup
		= new AndGroup(Expression[] exprs)
		::= (SubExpression:~exprs)+;

	*/
	bool parse_AndGroup(){
		debug Stdout("parse_AndGroup").newline;
		Expression[] var_exprs;

		// Iterator
		size_t counter5 = 0;
		start2:
			// (terminator)
			if(!hasMore()){
				goto end3;
			}
			// (expression)
			expr4:
				// Production
				if(!parse_SubExpression()){
					goto end3;
				}
				smartAppend(var_exprs,getMatchValue!(Expression)());
			increment6:
			// (increment expr count)
				counter5 ++;
			goto start2;
		end3:
			// (range test)
				if(!((counter5 >= 1))){
					goto fail1;
					goto pass0;
				}
		// Rule
		pass0:
			setMatchValue(new AndGroup(var_exprs));
			debug Stdout.format("\tparse_AndGroup passed: {0}",getMatchValue!(AndGroup)).newline;
			return true;
		fail1:
			setMatchValue((AndGroup).init);
			debug Stdout.format("\tparse_AndGroup failed").newline;
			return false;
	}

	/*
	SubExpression
		= Expression expr
		::= Production:expr | Substitution:expr | Terminal:expr | Range:expr | Regexp:expr | GroupExpr:expr | OptionalExpr:expr | ZeroOrMoreExpr:expr | NegateExpr:expr | TestExpr:expr | LiteralExpr:expr | CustomTerminal:expr;

	*/
	bool parse_SubExpression(){
		debug Stdout("parse_SubExpression").newline;
		Expression var_expr;

		// OrGroup pass0
			// Production
			if(parse_Production()){
				smartAssign(var_expr,getMatchValue!(Production)());
				goto pass0;
			}
		term2:
			// Production
			if(parse_Substitution()){
				smartAssign(var_expr,getMatchValue!(Substitution)());
				goto pass0;
			}
		term3:
			// Production
			if(parse_Terminal()){
				smartAssign(var_expr,getMatchValue!(Terminal)());
				goto pass0;
			}
		term4:
			// Production
			if(parse_Range()){
				smartAssign(var_expr,getMatchValue!(CharRange)());
				goto pass0;
			}
		term5:
			// Production
			if(parse_Regexp()){
				smartAssign(var_expr,getMatchValue!(RegularExpression)());
				goto pass0;
			}
		term6:
			// Production
			if(parse_GroupExpr()){
				smartAssign(var_expr,getMatchValue!(Group)());
				goto pass0;
			}
		term7:
			// Production
			if(parse_OptionalExpr()){
				smartAssign(var_expr,getMatchValue!(Optional)());
				goto pass0;
			}
		term8:
			// Production
			if(parse_ZeroOrMoreExpr()){
				smartAssign(var_expr,getMatchValue!(Group)());
				goto pass0;
			}
		term9:
			// Production
			if(parse_NegateExpr()){
				smartAssign(var_expr,getMatchValue!(Negate)());
				goto pass0;
			}
		term10:
			// Production
			if(parse_TestExpr()){
				smartAssign(var_expr,getMatchValue!(Test)());
				goto pass0;
			}
		term11:
			// Production
			if(parse_LiteralExpr()){
				smartAssign(var_expr,getMatchValue!(Literal)());
				goto pass0;
			}
		term12:
			// Production
			if(!parse_CustomTerminal()){
				goto fail1;
			}
			smartAssign(var_expr,getMatchValue!(CustomTerminal)());
		// Rule
		pass0:
			setMatchValue(var_expr);
			debug Stdout.format("\tparse_SubExpression passed: {0}",getMatchValue!(Expression)).newline;
			return true;
		fail1:
			setMatchValue((Expression).init);
			debug Stdout.format("\tparse_SubExpression failed").newline;
			return false;
	}

	/*
	Production
		= new Production(String name,Binding binding,ProductionArg[] args)
		::= Identifier:name ["!(" (ProductionArg:~args)+ % "," ")"] [Binding:binding];

	*/
	bool parse_Production(){
		debug Stdout("parse_Production").newline;
		ProductionArg[] var_args;
		String var_name;
		Binding var_binding;

		// AndGroup
			auto position3 = getPos();
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,getMatchValue!(String)());
			term5:
				// Optional
					// AndGroup
						auto position8 = getPos();
							// Terminal
							if(!match("!(")){
								goto fail9;
							}
						term10:
							// Iterator
							size_t counter15 = 0;
							start11:
								// (terminator)
									// Terminal
									if(match(")")){
										goto end12;
									}
								// (delimeter)
								delim14:
								if(counter15 > 0){
									// Terminal
									if(!match(",")){
										goto fail9;
									}
								}
								// (expression)
								expr13:
									// Production
									if(!parse_ProductionArg()){
										goto fail9;
									}
									smartAppend(var_args,getMatchValue!(ProductionArg)());
								increment16:
								// (increment expr count)
									counter15 ++;
								goto start11;
							end12:
								// (range test)
									if(((counter15 >= 1))){
										goto term6;
									}
						fail9:
						setPos(position8);
						goto term6;
			term6:
				// Optional
					// Production
					if(parse_Binding()){
						smartAssign(var_binding,getMatchValue!(Binding)());
						goto pass0;
					}
					goto pass0;
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new Production(var_name,var_binding,var_args));
			debug Stdout.format("\tparse_Production passed: {0}",getMatchValue!(Production)).newline;
			return true;
		fail1:
			setMatchValue((Production).init);
			debug Stdout.format("\tparse_Production failed").newline;
			return false;
	}

	/*
	ProductionArg
		= ProductionArg arg
		::= StringProductionArg:arg | BindingProductionArg:arg;

	*/
	bool parse_ProductionArg(){
		debug Stdout("parse_ProductionArg").newline;
		ProductionArg var_arg;

		// OrGroup pass0
			// Production
			if(parse_StringProductionArg()){
				smartAssign(var_arg,getMatchValue!(StringProductionArg)());
				goto pass0;
			}
		term2:
			// Production
			if(!parse_BindingProductionArg()){
				goto fail1;
			}
			smartAssign(var_arg,getMatchValue!(BindingProductionArg)());
		// Rule
		pass0:
			setMatchValue(var_arg);
			debug Stdout.format("\tparse_ProductionArg passed: {0}",getMatchValue!(ProductionArg)).newline;
			return true;
		fail1:
			setMatchValue((ProductionArg).init);
			debug Stdout.format("\tparse_ProductionArg failed").newline;
			return false;
	}

	/*
	StringProductionArg
		= new StringProductionArg(String value)
		::= &TOK_STRING:value;

	*/
	bool parse_StringProductionArg(){
		debug Stdout("parse_StringProductionArg").newline;
		String var_value;

		// CustomTerminal
		if(!match(TOK_STRING)){
			goto fail1;
		}
		smartAssign(var_value,getMatchValue!(String)());
		// Rule
		pass0:
			setMatchValue(new StringProductionArg(var_value));
			debug Stdout.format("\tparse_StringProductionArg passed: {0}",getMatchValue!(StringProductionArg)).newline;
			return true;
		fail1:
			setMatchValue((StringProductionArg).init);
			debug Stdout.format("\tparse_StringProductionArg failed").newline;
			return false;
	}

	/*
	BindingProductionArg
		= new BindingProductionArg(String value)
		::= Identifier:value;

	*/
	bool parse_BindingProductionArg(){
		debug Stdout("parse_BindingProductionArg").newline;
		String var_value;

		// Production
		if(!parse_Identifier()){
			goto fail1;
		}
		smartAssign(var_value,getMatchValue!(String)());
		// Rule
		pass0:
			setMatchValue(new BindingProductionArg(var_value));
			debug Stdout.format("\tparse_BindingProductionArg passed: {0}",getMatchValue!(BindingProductionArg)).newline;
			return true;
		fail1:
			setMatchValue((BindingProductionArg).init);
			debug Stdout.format("\tparse_BindingProductionArg failed").newline;
			return false;
	}

	/*
	Substitution
		= new Substitution(String name,Binding binding)
		::= "." Identifier:name [Binding:binding];

	*/
	bool parse_Substitution(){
		debug Stdout("parse_Substitution").newline;
		String var_name;
		Binding var_binding;

		// AndGroup
			auto position3 = getPos();
				// Terminal
				if(!match(".")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,getMatchValue!(String)());
			term6:
				// Optional
					// Production
					if(parse_Binding()){
						smartAssign(var_binding,getMatchValue!(Binding)());
						goto pass0;
					}
					goto pass0;
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new Substitution(var_name,var_binding));
			debug Stdout.format("\tparse_Substitution passed: {0}",getMatchValue!(Substitution)).newline;
			return true;
		fail1:
			setMatchValue((Substitution).init);
			debug Stdout.format("\tparse_Substitution failed").newline;
			return false;
	}

	/*
	GroupExpr
		= new Group(Expression expr,Binding binding)
		::= "(" Expression:expr ")" [Binding:binding];

	*/
	bool parse_GroupExpr(){
		debug Stdout("parse_GroupExpr").newline;
		Expression var_expr;
		Binding var_binding;

		// AndGroup
			auto position3 = getPos();
				// Terminal
				if(!match("(")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Expression()){
					goto fail4;
				}
				smartAssign(var_expr,getMatchValue!(OrGroup)());
			term6:
				// Terminal
				if(!match(")")){
					goto fail4;
				}
			term7:
				// Optional
					// Production
					if(parse_Binding()){
						smartAssign(var_binding,getMatchValue!(Binding)());
						goto pass0;
					}
					goto pass0;
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new Group(var_expr,var_binding));
			debug Stdout.format("\tparse_GroupExpr passed: {0}",getMatchValue!(Group)).newline;
			return true;
		fail1:
			setMatchValue((Group).init);
			debug Stdout.format("\tparse_GroupExpr failed").newline;
			return false;
	}

	/*
	OptionalExpr
		= new Optional(Expression expr,Binding binding)
		::= "[" Expression:expr "]" [Binding:binding];

	*/
	bool parse_OptionalExpr(){
		debug Stdout("parse_OptionalExpr").newline;
		Expression var_expr;
		Binding var_binding;

		// AndGroup
			auto position3 = getPos();
				// Terminal
				if(!match("[")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Expression()){
					goto fail4;
				}
				smartAssign(var_expr,getMatchValue!(OrGroup)());
			term6:
				// Terminal
				if(!match("]")){
					goto fail4;
				}
			term7:
				// Optional
					// Production
					if(parse_Binding()){
						smartAssign(var_binding,getMatchValue!(Binding)());
						goto pass0;
					}
					goto pass0;
			fail4:
			setPos(position3);
			goto fail1;
		// Rule
		pass0:
			setMatchValue(new Optional(var_expr,var_binding));
			debug Stdout.format("\tparse_OptionalExpr passed: {0}",getMatchValue!(Optional)).newline;
			return true;
		fail1:
